--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
   "devMode": true,
   "timeZone": "Asia/Dhaka",
-  "prefix": "!",
+  "prefix": "€",
   "symbols": "●",
   "owner": {
-    "name": "YOUR_NAME",
+    "name": "Kyo Soma",
     "facebook": "FACEBOOK_ID",
     "username": "TG_USERNAME"
   },
   "admin": [
-    "ADMIN_UID"
+    "8286999004"
   ],
   "vip": [
-    "VIP_UID"
+    "8286999004"
   ],
   "loadCmds": true,
   "loadEvents": true,
