Update owner name and admin/vip IDs in config.json

--- a/config.json
+++ b/config.json
@@ -4,15 +4,15 @@
   "prefix": "€",
   "symbols": "●",
   "owner": {
-    "name": "Kyo Soma",
+    "name": "Samy Charles",
     "facebook": "FACEBOOK_ID",
     "username": "TG_USERNAME"
   },
   "admin": [
-    "8286999004"
+    "7096786747"
   ],
   "vip": [
-    "8286999004"
+    "7096786747"
   ],
   "loadCmds": true,
   "loadEvents": true,
